--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules/
+
+# misc
+/.angular/cache
+/.angular/*
+.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
