--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^20.3.4",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@emailjs/browser": "^4.4.1",
     "rxjs": "^7.8.0",
     "swiper": "^12.0.2",
     "zone.js": "~0.14.10"
@@ -29,6 +32,7 @@
     "@types/jasmine": "^5.1.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "sass": "^1.69.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.5.4"
   }
